feat(servlets): add todo servlet

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -8,4 +8,12 @@
         <servlet-name>hello</servlet-name>
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>todo</servlet-name>
+        <servlet-class>TodoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>todo</servlet-name>
+        <url-pattern>/todos</url-pattern>
+    </servlet-mapping>
 </web-app>
